--- a/partials/home.phtml
+++ b/partials/home.phtml
@@ -7,7 +7,7 @@ $algorithms = $__model->fetchLatestAlgorithms(NUMBER_OF_LATEST_ALGORITHMS);
 if ($__uid) {
     $my_algorithms = $__model->fetchAlgorithmsOfUser($__uid, true, NUMBER_OF_MY_ALGORITHMS);
 }
-require_once BASEDIR . "includes/viewHelper.php";
+require_once BASEDIR . "includes/helper/viewHelper.php";
 ?>
     <!-- HEADER -->
     <div class="jumbotron">
