--- a/partials/index.phtml
+++ b/partials/index.phtml
@@ -1,7 +1,7 @@
 <?php
 if (!defined('BASEDIR')) die('You cannot call this script directly !');
 global $l10n;
-require_once BASEDIR . "includes/viewHelper.php";
+require_once BASEDIR . "includes/helper/viewHelper.php";
 
 $_tabs = [
     'overview' => 'overview',
